Add baseline tests of util files and fixes based on them

--- a/examples/an_iterated_model_dataset_comparison.ipynb
+++ b/examples/an_iterated_model_dataset_comparison.ipynb
@@ -43,12 +43,14 @@
     "\n",
     "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
     "\n",
+    "from causeinfer import utils\n",
     "from causeinfer.data import hillstrom, mayo_pbc, cmf_micro\n",
-    "from causeinfer.utils import plot_unit_distributions, train_test_split\n",
-    "from causeinfer.utils import over_sample, mutli_cross_tab\n",
-    "from causeinfer.standard_algorithms import TwoModel, InteractionTerm\n",
-    "from causeinfer.standard_algorithms import BinaryTransformation\n",
-    "from causeinfer.standard_algorithms import QuaternaryTransformation\n",
+    "from causeinfer.standard_algorithms.two_model import TwoModel\n",
+    "from causeinfer.standard_algorithms.interaction_term import InteractionTerm\n",
+    "from causeinfer.standard_algorithms.binary_transformation import BinaryTransformation\n",
+    "from causeinfer.standard_algorithms.quaternary_transformation import (\n",
+    "    QuaternaryTransformation,\n",
+    ")\n",
     "from causeinfer.evaluation import qini_score, auuc_score\n",
     "from causeinfer.evaluation import plot_cum_effect, plot_cum_gain, plot_qini\n",
     "from causeinfer.evaluation import plot_batch_responses, signal_to_noise\n",
@@ -295,7 +297,7 @@
    ],
    "source": [
     "# Over-sampling of control\n",
-    "X_os_hillstrom, y_os_hillstrom, w_os_hillstrom = over_sample(X_1=X_control_hillstrom, y_1=y_control_hillstrom, w_1=w_control_hillstrom, \n",
+    "X_os_hillstrom, y_os_hillstrom, w_os_hillstrom = utils.over_sample(X_1=X_control_hillstrom, y_1=y_control_hillstrom, w_1=w_control_hillstrom, \n",
     "                                                             sample_2_size=len(X_women), shuffle=True)"
    ]
   },
@@ -352,7 +354,7 @@
    "source": [
     "X_train_hillstrom, X_test_hillstrom, \\\n",
     "y_train_hillstrom, y_test_hillstrom, \\\n",
-    "w_train_hillstrom, w_test_hillstrom = train_test_split(X_split_hillstrom, y_split_hillstrom, w_split_hillstrom, \n",
+    "w_train_hillstrom, w_test_hillstrom = utils.train_test_split(X_split_hillstrom, y_split_hillstrom, w_split_hillstrom, \n",
     "                                                       percent_train=0.7, random_state=42, \n",
     "                                                       maintain_proportions=True)\n",
     "X_train_hillstrom.shape, X_test_hillstrom.shape, \\\n",
@@ -538,7 +540,7 @@
    ],
    "source": [
     "# Over-sampling of control\n",
-    "X_os_mayo, y_os_mayo, w_os_mayo = over_sample(X_1=X_control_mayo, y_1=y_control_mayo, w_1=w_control_mayo, \n",
+    "X_os_mayo, y_os_mayo, w_os_mayo = utils.over_sample(X_1=X_control_mayo, y_1=y_control_mayo, w_1=w_control_mayo, \n",
     "                                              sample_2_size=len(X_treatment_mayo), shuffle=True)"
    ]
   },
@@ -595,7 +597,7 @@
    "source": [
     "X_train_mayo, X_test_mayo, \\\n",
     "y_train_mayo, y_test_mayo, \\\n",
-    "w_train_mayo, w_test_mayo = train_test_split(X_split_mayo, y_split_mayo, w_split_mayo, \n",
+    "w_train_mayo, w_test_mayo = utils.train_test_split(X_split_mayo, y_split_mayo, w_split_mayo, \n",
     "                                             percent_train=0.7, random_state=42, \n",
     "                                             maintain_proportions=True)\n",
     "\n",
@@ -705,7 +707,7 @@
    ],
    "source": [
     "# Over-sampling of control\n",
-    "X_os_cmf, y_os_cmf, w_os_cmf = over_sample(X_1=X_control_cmf, y_1=y_control_cmf, w_1=w_control_cmf, \n",
+    "X_os_cmf, y_os_cmf, w_os_cmf = utils.over_sample(X_1=X_control_cmf, y_1=y_control_cmf, w_1=w_control_cmf, \n",
     "                               sample_2_size=len(X_treatment_cmf), shuffle=True)"
    ]
   },
@@ -762,7 +764,7 @@
    "source": [
     "X_train_cmf, X_test_cmf, \\\n",
     "y_train_cmf, y_test_cmf, \\\n",
-    "w_train_cmf, w_test_cmf = train_test_split(X_split_cmf, y_split_cmf, w_split_cmf, \n",
+    "w_train_cmf, w_test_cmf = utils.train_test_split(X_split_cmf, y_split_cmf, w_split_cmf, \n",
     "                                           percent_train=0.7, random_state=42, \n",
     "                                           maintain_proportions=True)\n",
     "\n",
@@ -1266,7 +1268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   },
   "toc": {
    "base_numbering": 1,
