--- a/examples/medical_mayo_pbc.ipynb
+++ b/examples/medical_mayo_pbc.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Mayo PBC Dataset**\n",
-    "\n",
-    "A dataset on medical trials to combat primary biliary cholangitis (PBC, formerly cirrhosis) of the liver from the Mayo Clinic."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "toc": true
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
     "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Load-Data\" data-toc-modified-id=\"Load-Data-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Load Data</a></span><ul class=\"toc-item\"><li><span><a href=\"#Exploration-Data\" data-toc-modified-id=\"Exploration-Data-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Exploration Data</a></span></li><li><span><a href=\"#Modeling-Data\" data-toc-modified-id=\"Modeling-Data-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Modeling Data</a></span></li></ul></li><li><span><a href=\"#Data-Exploration\" data-toc-modified-id=\"Data-Exploration-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Data Exploration</a></span><ul class=\"toc-item\"><li><span><a href=\"#Full-Data-Visualization\" data-toc-modified-id=\"Full-Data-Visualization-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Full Data Visualization</a></span></li><li><span><a href=\"#Modeling-Data-Preparation\" data-toc-modified-id=\"Modeling-Data-Preparation-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Modeling Data Preparation</a></span></li></ul></li><li><span><a href=\"#Standard-Models\" data-toc-modified-id=\"Standard-Models-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Standard Models</a></span><ul class=\"toc-item\"><li><span><a href=\"#Two-Model\" data-toc-modified-id=\"Two-Model-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Two Model</a></span></li><li><span><a href=\"#Interaction-Term\" data-toc-modified-id=\"Interaction-Term-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Interaction Term</a></span></li><li><span><a href=\"#Class-Transformations\" data-toc-modified-id=\"Class-Transformations-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Class Transformations</a></span><ul class=\"toc-item\"><li><span><a href=\"#Binary-Transformation\" data-toc-modified-id=\"Binary-Transformation-3.3.1\"><span class=\"toc-item-num\">3.3.1&nbsp;&nbsp;</span>Binary Transformation</a></span></li><li><span><a href=\"#Quaternary-Transformation\" data-toc-modified-id=\"Quaternary-Transformation-3.3.2\"><span class=\"toc-item-num\">3.3.2&nbsp;&nbsp;</span>Quaternary Transformation</a></span></li></ul></li></ul></li><li><span><a href=\"#Evaluation\" data-toc-modified-id=\"Evaluation-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Evaluation</a></span><ul class=\"toc-item\"><li><span><a href=\"#Iterations\" data-toc-modified-id=\"Iterations-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Iterations</a></span></li><li><span><a href=\"#Visual\" data-toc-modified-id=\"Visual-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Visual</a></span></li><li><span><a href=\"#Iterated-Evaluation-and-Variance\" data-toc-modified-id=\"Iterated-Evaluation-and-Variance-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>Iterated Evaluation and Variance</a></span></li></ul></li><li><span><a href=\"#Summary\" data-toc-modified-id=\"Summary-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Summary</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Mayo PBC Dataset**\n",
+    "\n",
+    "A dataset on medical trials to combat primary biliary cholangitis (PBC, formerly cirrhosis) of the liver from the Mayo Clinic."
    ]
   },
   {
@@ -51,11 +51,14 @@
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
+    "from causeinfer import utils\n",
     "from causeinfer.data import mayo_pbc\n",
-    "from causeinfer.utils import plot_unit_distributions, train_test_split, over_sample\n",
-    "from causeinfer.standard_algorithms import TwoModel, InteractionTerm\n",
-    "from causeinfer.standard_algorithms import BinaryTransformation\n",
-    "from causeinfer.standard_algorithms import QuaternaryTransformation\n",
+    "from causeinfer.standard_algorithms.two_model import TwoModel\n",
+    "from causeinfer.standard_algorithms.interaction_term import InteractionTerm\n",
+    "from causeinfer.standard_algorithms.binary_transformation import BinaryTransformation\n",
+    "from causeinfer.standard_algorithms.quaternary_transformation import (\n",
+    "    QuaternaryTransformation,\n",
+    ")\n",
     "from causeinfer.evaluation import qini_score, auuc_score\n",
     "from causeinfer.evaluation import plot_cum_effect, plot_cum_gain, plot_qini\n",
     "from causeinfer.evaluation import plot_batch_responses, signal_to_noise\n",
@@ -657,17 +660,31 @@
     }
    ],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20,5))\n",
-    "fig.subplots_adjust(bottom=0.2) # Add space after plots\n",
+    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
+    "fontsize = 20\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='histologic_stage', treatment = None,\n",
-    "                        plot_x_label='histologic_stage', plot_y_label='count', plot_title='Breakdown of histologic_stage', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax1),\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"histologic_stage\", treatment=None, bins=None, axis=ax1,\n",
+    "),\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='histologic_stage', treatment = 'treatment',\n",
-    "                        plot_x_label='histologic_stage', plot_y_label='count', plot_title='Breakdown of histologic_stage and Treatment', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax2)\n",
-    "plt.savefig('outputs_images/mayo_breakdown_histologic_stage.png', dpi=150)"
+    "ax1.set_xlabel(\"Histologic Stage\", fontsize=fontsize)\n",
+    "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax1.axes.set_title(\"Breakdown of Histologic Stage\", fontsize=fontsize * 1.5)\n",
+    "ax1.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax1.set_xticklabels(ax1.get_xticklabels())\n",
+    "\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"histologic_stage\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    ")\n",
+    "\n",
+    "ax2.set_xlabel(\"Histologic Stage\", fontsize=fontsize)\n",
+    "ax2.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax2.axes.set_title(\"Breakdown of Histologic Stage and Treatment\", fontsize=fontsize * 1.5)\n",
+    "ax2.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax2.set_xticklabels(ax2.get_xticklabels())\n",
+    "\n",
+    "# plt.savefig('outputs_images/mayo_breakdown_histologic_stage.png', dpi=150)\n",
+    "plt.show()"
    ]
   },
   {
@@ -693,15 +710,31 @@
    ],
    "source": [
     "# 0=male, 1=female\n",
-    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20,5))\n",
+    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
+    "fontsize = 20\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='sex', treatment = None,\n",
-    "                        plot_x_label='sex', plot_y_label='count', plot_title='Breakdown of sex', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax1),\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"sex\", treatment=None, bins=None, axis=ax1,\n",
+    "),\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='sex', treatment = 'treatment',\n",
-    "                        plot_x_label='sex', plot_y_label='count', plot_title='Breakdown of sex and Treatment', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax2)"
+    "ax1.set_xlabel(\"Sex\", fontsize=fontsize)\n",
+    "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax1.axes.set_title(\"Breakdown of Sex\", fontsize=fontsize * 1.5)\n",
+    "ax1.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax1.set_xticklabels(ax1.get_xticklabels())\n",
+    "\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"sex\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    ")\n",
+    "\n",
+    "ax2.set_xlabel(\"Sex\", fontsize=fontsize)\n",
+    "ax2.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax2.axes.set_title(\"Breakdown of Sex and Treatment\", fontsize=fontsize * 1.5)\n",
+    "ax2.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax2.set_xticklabels(ax2.get_xticklabels())\n",
+    "\n",
+    "# plt.savefig('outputs_images/mayo_breakdown_sex.png', dpi=150)\n",
+    "plt.show()"
    ]
   },
   {
@@ -726,18 +759,31 @@
     }
    ],
    "source": [
-    "# 0=alive, 1=transplant, 2=deceased\n",
-    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20,5))\n",
-    "fig.subplots_adjust(bottom=0.2) # Add space after plots\n",
+    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
+    "fontsize = 20\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='status', treatment = None,\n",
-    "                        plot_x_label='status', plot_y_label='count', plot_title='Breakdown of status', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax1),\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"status\", treatment=None, bins=None, axis=ax1,\n",
+    "),\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='status', treatment = 'treatment',\n",
-    "                        plot_x_label='status', plot_y_label='count', plot_title='Breakdown of status and Treatment', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax2)\n",
-    "plt.savefig('outputs_images/mayo_breakdown_status.png', dpi=150)"
+    "ax1.set_xlabel(\"Status\", fontsize=fontsize)\n",
+    "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax1.axes.set_title(\"Breakdown of Status\", fontsize=fontsize * 1.5)\n",
+    "ax1.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax1.set_xticklabels(ax1.get_xticklabels())\n",
+    "\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"status\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    ")\n",
+    "\n",
+    "ax2.set_xlabel(\"Status\", fontsize=fontsize)\n",
+    "ax2.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax2.axes.set_title(\"Breakdown of Status and Treatment\", fontsize=fontsize * 1.5)\n",
+    "ax2.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax2.set_xticklabels(ax2.get_xticklabels())\n",
+    "\n",
+    "# plt.savefig('outputs_images/mayo_breakdown_status.png', dpi=150)\n",
+    "plt.show()"
    ]
   },
   {
@@ -762,17 +808,31 @@
     }
    ],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20,5))\n",
-    "fig.subplots_adjust(bottom=0.3) # Add space after plots\n",
+    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
+    "fontsize = 20\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='age', treatment = None,\n",
-    "                        plot_x_label='age', plot_y_label='count', plot_title='Breakdown of age', \n",
-    "                        bins=25, figsize=None, fontsize=20, axis=ax1),\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"age\", treatment=None, bins=25, axis=ax1,\n",
+    "),\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='age', treatment = 'treatment',\n",
-    "                        plot_x_label='age', plot_y_label='count', plot_title='Breakdown of age and Treatment', \n",
-    "                        bins=25, figsize=None, fontsize=20, axis=ax2)\n",
-    "plt.savefig('outputs_images/mayo_breakdown_age.png', dpi=150)"
+    "ax1.set_xlabel(\"Age\", fontsize=fontsize)\n",
+    "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax1.axes.set_title(\"Breakdown of Age\", fontsize=fontsize * 1.5)\n",
+    "ax1.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax1.set_xticklabels(ax1.get_xticklabels(), rotation=30)\n",
+    "\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"age\", treatment=\"treatment\", bins=25, axis=ax2,\n",
+    ")\n",
+    "\n",
+    "ax2.set_xlabel(\"Age\", fontsize=fontsize)\n",
+    "ax2.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax2.axes.set_title(\"Breakdown of Age and Treatment\", fontsize=fontsize * 1.5)\n",
+    "ax2.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax2.set_xticklabels(ax2.get_xticklabels(), rotation=30)\n",
+    "\n",
+    "# plt.savefig('outputs_images/mayo_breakdown_age.png', dpi=150)\n",
+    "plt.show()"
    ]
   },
   {
@@ -1104,7 +1164,7 @@
    ],
    "source": [
     "# Over-sampling of control\n",
-    "X_os, y_os, w_os = over_sample(X_1=X_control, y_1=y_control, w_1=w_control, \n",
+    "X_os, y_os, w_os = utils.over_sample(X_1=X_control, y_1=y_control, w_1=w_control, \n",
     "                               sample_2_size=len(X_treatment), shuffle=True)"
    ]
   },
@@ -1148,7 +1208,7 @@
    },
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test, w_train, w_test = train_test_split(X_split, y_split, w_split, \n",
+    "X_train, X_test, y_train, y_test, w_train, w_test = utils.train_test_split(X_split, y_split, w_split, \n",
     "                                                                     percent_train=0.7, random_state=42, \n",
     "                                                                     maintain_proportions=True)"
    ]
@@ -2049,7 +2109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   },
   "toc": {
    "base_numbering": 1,
