--- a/examples/socio_econ_cmf_micro.ipynb
+++ b/examples/socio_econ_cmf_micro.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Center for Microfinance Dataset**\n",
-    "\n",
-    "A dataset on microfinance from The Centre for Micro Finance (CMF) at the Institute for Financial Management Research (Chennai, India)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "toc": true
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
     "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Load-Data\" data-toc-modified-id=\"Load-Data-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Load Data</a></span><ul class=\"toc-item\"><li><span><a href=\"#Exploration-Data\" data-toc-modified-id=\"Exploration-Data-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Exploration Data</a></span></li><li><span><a href=\"#Modeling-Data\" data-toc-modified-id=\"Modeling-Data-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Modeling Data</a></span></li></ul></li><li><span><a href=\"#Data-Exploration\" data-toc-modified-id=\"Data-Exploration-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Data Exploration</a></span><ul class=\"toc-item\"><li><span><a href=\"#Full-Data-Visualization\" data-toc-modified-id=\"Full-Data-Visualization-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Full Data Visualization</a></span></li><li><span><a href=\"#Modeling-Data-Preparation\" data-toc-modified-id=\"Modeling-Data-Preparation-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Modeling Data Preparation</a></span></li></ul></li><li><span><a href=\"#Standard-Models\" data-toc-modified-id=\"Standard-Models-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Standard Models</a></span><ul class=\"toc-item\"><li><span><a href=\"#Two-Model\" data-toc-modified-id=\"Two-Model-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Two Model</a></span></li><li><span><a href=\"#Interaction-Term\" data-toc-modified-id=\"Interaction-Term-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Interaction Term</a></span></li><li><span><a href=\"#Class-Transformations\" data-toc-modified-id=\"Class-Transformations-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Class Transformations</a></span></li></ul></li><li><span><a href=\"#Evaluation\" data-toc-modified-id=\"Evaluation-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Evaluation</a></span><ul class=\"toc-item\"><li><span><a href=\"#Iterations\" data-toc-modified-id=\"Iterations-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Iterations</a></span></li><li><span><a href=\"#Visual\" data-toc-modified-id=\"Visual-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Visual</a></span></li><li><span><a href=\"#Iterated-Evaluation-and-Variance\" data-toc-modified-id=\"Iterated-Evaluation-and-Variance-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>Iterated Evaluation and Variance</a></span></li></ul></li><li><span><a href=\"#Summary\" data-toc-modified-id=\"Summary-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Summary</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Center for Microfinance Dataset**\n",
+    "\n",
+    "A dataset on microfinance from The Centre for Micro Finance (CMF) at the Institute for Financial Management Research (Chennai, India)."
    ]
   },
   {
@@ -51,9 +51,10 @@
     "\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
+    "from causeinfer import utils\n",
     "from causeinfer.data import cmf_micro\n",
-    "from causeinfer.utils import plot_unit_distributions, train_test_split, over_sample\n",
-    "from causeinfer.standard_algorithms import TwoModel, InteractionTerm\n",
+    "from causeinfer.standard_algorithms.two_model import TwoModel\n",
+    "from causeinfer.standard_algorithms.interaction_term import InteractionTerm\n",
     "from causeinfer.evaluation import qini_score, auuc_score\n",
     "from causeinfer.evaluation import plot_cum_effect, plot_cum_gain, plot_qini\n",
     "from causeinfer.evaluation import plot_batch_responses, signal_to_noise\n",
@@ -2992,17 +2993,31 @@
     }
    ],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20,5))\n",
-    "fig.subplots_adjust(bottom=0.2) # Add space after plots\n",
+    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
+    "fontsize = 20\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='children_1', treatment = None,\n",
-    "                        plot_x_label='children_1', plot_y_label='counts', plot_title='Breakdown of children_1', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax1),\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"children_1\", treatment=None, bins=None, axis=ax1,\n",
+    "),\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='children_1', treatment = 'treatment',\n",
-    "                        plot_x_label='children_1', plot_y_label='counts', plot_title='Breakdown of children_1 and Treatment', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax2)\n",
-    "plt.savefig('outputs_images/cmf_breakdown_children_1.png', dpi=150)"
+    "ax1.set_xlabel(\"children_1\", fontsize=fontsize)\n",
+    "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax1.axes.set_title(\"Breakdown of children_1\", fontsize=fontsize * 1.5)\n",
+    "ax1.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax1.set_xticklabels(ax1.get_xticklabels())\n",
+    "\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"children_1\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    ")\n",
+    "\n",
+    "ax2.set_xlabel(\"children_1\", fontsize=fontsize)\n",
+    "ax2.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax2.axes.set_title(\"Breakdown of children_1 and Treatment\", fontsize=fontsize * 1.5)\n",
+    "ax2.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax2.set_xticklabels(ax2.get_xticklabels())\n",
+    "\n",
+    "# plt.savefig('outputs_images/cmf_breakdown_children_1.png', dpi=150)\n",
+    "plt.show()"
    ]
   },
   {
@@ -3027,17 +3042,31 @@
     }
    ],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20,5))\n",
-    "fig.subplots_adjust(bottom=0.2) # Add space after plots\n",
+    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
+    "fontsize = 20\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='hhsize_1', treatment = None,\n",
-    "                        plot_x_label='hhsize_1', plot_y_label='counts', plot_title='Breakdown of hhsize_1', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax1),\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"hhsize_1\", treatment=None, bins=None, axis=ax1,\n",
+    "),\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='hhsize_1', treatment = 'treatment',\n",
-    "                        plot_x_label='hhsize_1', plot_y_label='counts', plot_title='Breakdown of hhsize_1 and Treatment', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax2)\n",
-    "plt.savefig('outputs_images/cmf_breakdown_hhsize_1.png', dpi=150)"
+    "ax1.set_xlabel(\"hhsize_1\", fontsize=fontsize)\n",
+    "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax1.axes.set_title(\"Breakdown of hhsize_1\", fontsize=fontsize * 1.5)\n",
+    "ax1.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax1.set_xticklabels(ax1.get_xticklabels())\n",
+    "\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"hhsize_1\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    ")\n",
+    "\n",
+    "ax2.set_xlabel(\"hhsize_1\", fontsize=fontsize)\n",
+    "ax2.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax2.axes.set_title(\"Breakdown of hhsize_1 and Treatment\", fontsize=fontsize * 1.5)\n",
+    "ax2.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax2.set_xticklabels(ax2.get_xticklabels())\n",
+    "\n",
+    "# plt.savefig('outputs_images/cmf_breakdown_hhsize_1.png', dpi=150)\n",
+    "plt,show()"
    ]
   },
   {
@@ -3062,15 +3091,31 @@
     }
    ],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20,5))\n",
+    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
+    "fontsize = 20\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='anyloan_1', treatment = None,\n",
-    "                        plot_x_label='anyloan_1', plot_y_label='counts', plot_title='Breakdown of anyloan_1', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax1),\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"anyloan_1\", treatment=None, bins=None, axis=ax1,\n",
+    "),\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='anyloan_1', treatment = 'treatment',\n",
-    "                        plot_x_label='anyloan_1', plot_y_label='counts', plot_title='Breakdown of anyloan_1 and Treatment', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax2)"
+    "ax1.set_xlabel(\"anyloan_1\", fontsize=fontsize)\n",
+    "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax1.axes.set_title(\"Breakdown of anyloan_1\", fontsize=fontsize * 1.5)\n",
+    "ax1.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax1.set_xticklabels(ax1.get_xticklabels())\n",
+    "\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"anyloan_1\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    ")\n",
+    "\n",
+    "ax2.set_xlabel(\"anyloan_1\", fontsize=fontsize)\n",
+    "ax2.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax2.axes.set_title(\"Breakdown of anyloan_1 and Treatment\", fontsize=fontsize * 1.5)\n",
+    "ax2.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax2.set_xticklabels(ax2.get_xticklabels())\n",
+    "\n",
+    "# plt.savefig('outputs_images/cmf_breakdown_anyloan_1.png', dpi=150)\n",
+    "plt,show()"
    ]
   },
   {
@@ -3095,17 +3140,31 @@
     }
    ],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20,5))\n",
-    "fig.subplots_adjust(bottom=0.2) # Add space after plots\n",
+    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
+    "fontsize = 20\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='spouse_works_wage_1', treatment = None,\n",
-    "                        plot_x_label='spouse_works_wage_1', plot_y_label='counts', plot_title='Breakdown of spouse_works_wage_1', \n",
-    "                        bins=None, figsize=None, fontsize=15, axis=ax1),\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"spouse_works_wage_1\", treatment=None, bins=None, axis=ax1,\n",
+    "),\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='spouse_works_wage_1', treatment = 'treatment',\n",
-    "                        plot_x_label='spouse_works_wage_1', plot_y_label='counts', plot_title='Breakdown of spouse_works_wage_1 and Treatment', \n",
-    "                        bins=None, figsize=None, fontsize=15, axis=ax2)\n",
-    "plt.savefig('outputs_images/cmf_breakdown_spouse_works_wage_1.png', dpi=150)"
+    "ax1.set_xlabel(\"spouse_works_wage_1\", fontsize=fontsize)\n",
+    "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax1.axes.set_title(\"Breakdown of spouse_works_wage_1\", fontsize=fontsize * 1.5)\n",
+    "ax1.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax1.set_xticklabels(ax1.get_xticklabels())\n",
+    "\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"spouse_works_wage_1\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    ")\n",
+    "\n",
+    "ax2.set_xlabel(\"spouse_works_wage_1\", fontsize=fontsize)\n",
+    "ax2.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax2.axes.set_title(\"Breakdown of spouse_works_wage_1 and Treatment\", fontsize=fontsize * 1.5)\n",
+    "ax2.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax2.set_xticklabels(ax2.get_xticklabels())\n",
+    "\n",
+    "# plt.savefig('outputs_images/cmf_breakdown_spouse_works_wage_1.png', dpi=150)\n",
+    "plt.show()"
    ]
   },
   {
@@ -3287,7 +3346,7 @@
    ],
    "source": [
     "# Over-sampling of control\n",
-    "X_os, y_os, w_os = over_sample(X_1=X_control, y_1=y_control, w_1=w_control, \n",
+    "X_os, y_os, w_os = utils.over_sample(X_1=X_control, y_1=y_control, w_1=w_control, \n",
     "                               sample_2_size=len(X_treatment), shuffle=True)"
    ]
   },
@@ -3331,7 +3390,7 @@
    },
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test, w_train, w_test = train_test_split(X_split, y_split, w_split, \n",
+    "X_train, X_test, y_train, y_test, w_train, w_test = utils.train_test_split(X_split, y_split, w_split, \n",
     "                                                                     percent_train=0.7, random_state=42, \n",
     "                                                                     maintain_proportions=True)"
    ]
@@ -4028,7 +4087,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   },
   "toc": {
    "base_numbering": 1,
