--- a/examples/business_hilstrom.ipynb
+++ b/examples/business_hilstrom.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Hillstrom Dataset**\n",
-    "\n",
-    "An email marketing dataset from Kevin Hillstrom's MineThatData blog."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "toc": true
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
     "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Load-Data\" data-toc-modified-id=\"Load-Data-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Load Data</a></span><ul class=\"toc-item\"><li><span><a href=\"#Exploration-Data\" data-toc-modified-id=\"Exploration-Data-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Exploration Data</a></span></li><li><span><a href=\"#Modeling-Data\" data-toc-modified-id=\"Modeling-Data-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Modeling Data</a></span></li></ul></li><li><span><a href=\"#Data-Exploration\" data-toc-modified-id=\"Data-Exploration-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Data Exploration</a></span><ul class=\"toc-item\"><li><span><a href=\"#Full-Data-Visualization\" data-toc-modified-id=\"Full-Data-Visualization-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Full Data Visualization</a></span></li><li><span><a href=\"#Modeling-Data-Preparation\" data-toc-modified-id=\"Modeling-Data-Preparation-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Modeling Data Preparation</a></span></li></ul></li><li><span><a href=\"#Standard-Models\" data-toc-modified-id=\"Standard-Models-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Standard Models</a></span><ul class=\"toc-item\"><li><span><a href=\"#Two-Model\" data-toc-modified-id=\"Two-Model-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Two Model</a></span></li><li><span><a href=\"#Interaction-Term\" data-toc-modified-id=\"Interaction-Term-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Interaction Term</a></span></li><li><span><a href=\"#Class-Transformations\" data-toc-modified-id=\"Class-Transformations-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Class Transformations</a></span><ul class=\"toc-item\"><li><span><a href=\"#Binary-Transformation\" data-toc-modified-id=\"Binary-Transformation-3.3.1\"><span class=\"toc-item-num\">3.3.1&nbsp;&nbsp;</span>Binary Transformation</a></span></li><li><span><a href=\"#Quaternary-Transformation\" data-toc-modified-id=\"Quaternary-Transformation-3.3.2\"><span class=\"toc-item-num\">3.3.2&nbsp;&nbsp;</span>Quaternary Transformation</a></span></li></ul></li></ul></li><li><span><a href=\"#Evaluation\" data-toc-modified-id=\"Evaluation-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Evaluation</a></span><ul class=\"toc-item\"><li><span><a href=\"#Iterations\" data-toc-modified-id=\"Iterations-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Iterations</a></span></li><li><span><a href=\"#Visual\" data-toc-modified-id=\"Visual-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Visual</a></span></li><li><span><a href=\"#Iterated-Evaluation-and-Variance\" data-toc-modified-id=\"Iterated-Evaluation-and-Variance-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>Iterated Evaluation and Variance</a></span></li></ul></li><li><span><a href=\"#Summary\" data-toc-modified-id=\"Summary-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Summary</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Hillstrom Dataset**\n",
+    "\n",
+    "An email marketing dataset from Kevin Hillstrom's MineThatData blog."
    ]
   },
   {
@@ -51,12 +51,14 @@
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
+    "from causeinfer import utils\n",
     "from causeinfer.data import hillstrom\n",
-    "from causeinfer.utils import plot_unit_distributions, train_test_split, over_sample\n",
-    "from causeinfer.utils import mutli_cross_tab\n",
-    "from causeinfer.standard_algorithms import TwoModel, InteractionTerm\n",
-    "from causeinfer.standard_algorithms import BinaryTransformation\n",
-    "from causeinfer.standard_algorithms import QuaternaryTransformation\n",
+    "from causeinfer.standard_algorithms.two_model import TwoModel\n",
+    "from causeinfer.standard_algorithms.interaction_term import InteractionTerm\n",
+    "from causeinfer.standard_algorithms.binary_transformation import BinaryTransformation\n",
+    "from causeinfer.standard_algorithms.quaternary_transformation import (\n",
+    "    QuaternaryTransformation,\n",
+    ")\n",
     "from causeinfer.evaluation import qini_score, auuc_score\n",
     "from causeinfer.evaluation import plot_cum_effect, plot_cum_gain, plot_qini\n",
     "from causeinfer.evaluation import plot_batch_responses, signal_to_noise\n",
@@ -597,15 +599,31 @@
     }
    ],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20,5))\n",
+    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
+    "fontsize = 20\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='channel', treatment = None,\n",
-    "                        plot_x_label='channel', plot_y_label='counts', plot_title='Breakdown of channel', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax1),\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"channel\", treatment=None, bins=None, axis=ax1,\n",
+    "),\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='channel', treatment = 'treatment',\n",
-    "                        plot_x_label='channel', plot_y_label='counts', plot_title='Breakdown of channel and Treatment', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax2)"
+    "ax1.set_xlabel(\"Channel\", fontsize=fontsize)\n",
+    "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax1.axes.set_title(\"Breakdown of Channel\", fontsize=fontsize * 1.5)\n",
+    "ax1.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax1.set_xticklabels(ax1.get_xticklabels())\n",
+    "\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"channel\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    ")\n",
+    "\n",
+    "ax2.set_xlabel(\"Channel\", fontsize=fontsize)\n",
+    "ax2.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax2.axes.set_title(\"Breakdown of Channel and Treatment\", fontsize=fontsize * 1.5)\n",
+    "ax2.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax2.set_xticklabels(ax2.get_xticklabels())\n",
+    "\n",
+    "# plt.savefig('outputs_images/hillstrom_breakdown_channel.png', dpi=150)\n",
+    "plt.show()"
    ]
   },
   {
@@ -630,17 +648,31 @@
     }
    ],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20,5))\n",
-    "fig.subplots_adjust(bottom=0.2) # Add space after plots\n",
+    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
+    "fontsize = 20\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='visit', treatment = None,\n",
-    "                        plot_x_label='visit', plot_y_label='counts', plot_title='Breakdown of visit', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax1),\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"visit\", treatment=None, bins=None, axis=ax1,\n",
+    "),\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='visit', treatment = 'treatment',\n",
-    "                        plot_x_label='visit', plot_y_label='counts', plot_title='Breakdown of visit and Treatment', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax2)\n",
-    "plt.savefig('outputs_images/hillstrom_breakdown_visit.png', dpi=150)"
+    "ax1.set_xlabel(\"Visit\", fontsize=fontsize)\n",
+    "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax1.axes.set_title(\"Breakdown of Visit\", fontsize=fontsize * 1.5)\n",
+    "ax1.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax1.set_xticklabels(ax1.get_xticklabels())\n",
+    "\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"visit\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    ")\n",
+    "\n",
+    "ax2.set_xlabel(\"Visit\", fontsize=fontsize)\n",
+    "ax2.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax2.axes.set_title(\"Breakdown of Visit and Treatment\", fontsize=fontsize * 1.5)\n",
+    "ax2.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax2.set_xticklabels(ax2.get_xticklabels())\n",
+    "\n",
+    "# plt.savefig('outputs_images/hillstrom_breakdown_visit.png', dpi=150)\n",
+    "plt.show()"
    ]
   },
   {
@@ -665,17 +697,31 @@
     }
    ],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20,5))\n",
-    "fig.subplots_adjust(bottom=0.2) # Add space after plots\n",
+    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
+    "fontsize = 20\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='conversion', treatment = None,\n",
-    "                        plot_x_label='conversion', plot_y_label='counts', plot_title='Breakdown of conversion', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax1),\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"conversion\", treatment=None, bins=None, axis=ax1,\n",
+    "),\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='conversion', treatment = 'treatment',\n",
-    "                        plot_x_label='conversion', plot_y_label='counts', plot_title='Breakdown of conversion and Treatment', \n",
-    "                        bins=None, figsize=None, fontsize=20, axis=ax2)\n",
-    "plt.savefig('outputs_images/hillstrom_breakdown_conversion.png', dpi=150)"
+    "ax1.set_xlabel(\"Conversion\", fontsize=fontsize)\n",
+    "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax1.axes.set_title(\"Breakdown of Conversion\", fontsize=fontsize * 1.5)\n",
+    "ax1.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax1.set_xticklabels(ax1.get_xticklabels())\n",
+    "\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"conversion\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    ")\n",
+    "\n",
+    "ax2.set_xlabel(\"Conversion\", fontsize=fontsize)\n",
+    "ax2.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax2.axes.set_title(\"Breakdown of Conversion and Treatment\", fontsize=fontsize * 1.5)\n",
+    "ax2.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax2.set_xticklabels(ax2.get_xticklabels())\n",
+    "\n",
+    "# plt.savefig('outputs_images/hillstrom_breakdown_conversion.png', dpi=150)\n",
+    "plt.show()"
    ]
   },
   {
@@ -700,17 +746,31 @@
     }
    ],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20,5))\n",
-    "fig.subplots_adjust(bottom=0.2) # Add space after plots\n",
+    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
+    "fontsize = 20\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='spend', treatment = None,\n",
-    "                        plot_x_label='spend', plot_y_label='counts', plot_title='Breakdown of spend', \n",
-    "                        bins=25, figsize=None, fontsize=20, axis=ax1),\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"spend\", treatment=None, bins=25, axis=ax1,\n",
+    "),\n",
     "\n",
-    "plot_unit_distributions(df=df_full, variable='spend', treatment = 'treatment',\n",
-    "                        plot_x_label='spend', plot_y_label='counts', plot_title='Breakdown of spend and Treatment', \n",
-    "                        bins=25, figsize=None, fontsize=20, axis=ax2)\n",
-    "plt.savefig('outputs_images/hillstrom_breakdown_spend.png', dpi=150)"
+    "ax1.set_xlabel(\"Spend\", fontsize=fontsize)\n",
+    "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax1.axes.set_title(\"Breakdown of Spend\", fontsize=fontsize * 1.5)\n",
+    "ax1.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax1.set_xticklabels(ax1.get_xticklabels(), rotation=30)\n",
+    "\n",
+    "utils.plot_unit_distributions(\n",
+    "    df=df_full, variable=\"spend\", treatment=\"treatment\", bins=25, axis=ax2,\n",
+    ")\n",
+    "\n",
+    "ax2.set_xlabel(\"Spend\", fontsize=fontsize)\n",
+    "ax2.set_ylabel(\"Counts\", fontsize=fontsize)\n",
+    "ax2.axes.set_title(\"Breakdown of Spend and Treatment\", fontsize=fontsize * 1.5)\n",
+    "ax2.tick_params(labelsize=fontsize / 1.5)\n",
+    "ax2.set_xticklabels(ax2.get_xticklabels(), rotation=30)\n",
+    "\n",
+    "# plt.savefig('outputs_images/hillstrom_breakdown_spend.png', dpi=150)\n",
+    "plt.show()"
    ]
   },
   {
@@ -818,7 +878,7 @@
     }
    ],
    "source": [
-    "mutli_cross_tab(df=df, w_col='treatment', y_cols = ['visit', 'conversion'], \n",
+    "utils.multi_cross_tab(df=df, w_col='treatment', y_cols = ['visit', 'conversion'], \n",
     "                            label_limit=6, margins=True, normalize=True)"
    ]
   },
@@ -1041,7 +1101,7 @@
    ],
    "source": [
     "# Over-sampling of control\n",
-    "X_os, y_os, w_os = over_sample(X_1=X_control, y_1=y_control, w_1=w_control, \n",
+    "X_os, y_os, w_os = utils.over_sample(X_1=X_control, y_1=y_control, w_1=w_control, \n",
     "                               sample_2_size=len(X_women), shuffle=True)"
    ]
   },
@@ -1085,7 +1145,7 @@
    },
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test, w_train, w_test = train_test_split(X_split, y_split, w_split, \n",
+    "X_train, X_test, y_train, y_test, w_train, w_test = utils.train_test_split(X_split, y_split, w_split, \n",
     "                                                                     percent_train=0.7, random_state=42, \n",
     "                                                                     maintain_proportions=True)"
    ]
@@ -1986,7 +2046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   },
   "toc": {
    "base_numbering": 1,
